--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://{lukajincharadze}.github.io/{React-The-Wild-Oasis-Project}",
+  "homepage": "https://lukajincharadze.github.io/React-The-Wild-Oasis-Project",
   "name": "17-the-wild-oasis",
   "private": true,
   "version": "0.0.0",
